--- a/bin/user_shell/ermine_user_shell/BUILD.gn
+++ b/bin/user_shell/ermine_user_shell/BUILD.gn
@@ -30,6 +30,7 @@ rustc_binary("bin") {
     "//third_party/rust-crates/rustc_deps:itertools",
     "//third_party/rust-crates/rustc_deps:lazy_static",
     "//third_party/rust-crates/rustc_deps:parking_lot",
+    "//topaz/public/lib/ui/fuchsia_ui",
   ]
 }
 
